# water-flow

./: README.md  hacs.json  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-config-flow/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-coordinator-usage/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-calibration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-leak-detection/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-lovelace-card/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
custom_components/irrigation_monitor/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  number.py  sensor.py  strings.json  switch.py
tests/: conftest.py  test_button.py  test_card_setup.py  test_config_flow.py  test_coordinator.py  test_init.py  test_leak.py
(+2 files in other folders)
