[project]
name = "irrigation-monitor"
version = "0.1.0"
description = "Home Assistant custom integration for irrigation water flow monitoring and leak detection"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest-homeassistant-custom-component==0.13.316",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
